[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ReMD"
version = "1.0.0"
description = "Convert GitHub/Azure DevOps repositories to a single Markdown file"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.24.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
